microsoft vision working and swagger updated
